--- a/news-website/src/app/card/card.component.css
+++ b/news-website/src/app/card/card.component.css
@@ -36,8 +36,11 @@
   justify-content: space-between;
 }
 .card-img {
+  max-width: 50%;
+  max-height: 50%;
+  min-width: 40%;
   max-width: 40%;
-  max-height: 40%;
+  object-fit: cover;
 }
 .author {
   font-family: "PT Serif", serif;
@@ -56,4 +59,45 @@
   font-style: italic;
   justify-content: flex-end;
   color: #8d99ae;
+}
+@media only screen and (max-width: 500px) {
+  .card-feed {
+    flex-direction: column;
+    justify-content: start;
+    width: 100%;
+  }
+  .card-text {
+    max-width: 100%;
+  }
+  .card-img {
+    min-width: 100%;
+    min-height: 100%;
+    margin-bottom: 5px;
+  }
+  .title > h1 {
+    font-size: 15px;
+  }
+  .description {
+    font-size: 12px;
+  }
+  .author {
+    font-size: 10px;
+  }
+  .date {
+    font-size: 12px;
+  }
+}
+@media only screen and (min-width: 500px) {
+  .title > h1 {
+    font-size: 18px;
+  }
+  .description {
+    font-size: 14px;
+  }
+  .author {
+    font-size: 12px;
+  }
+  .date {
+    font-size: 14px;
+  }
 }
