--- a/news-website/src/app/categories/categories.component.css
+++ b/news-website/src/app/categories/categories.component.css
@@ -24,6 +24,7 @@ p {
   font-size: 18px;
   cursor: pointer;
   padding-top: 0.5rem;
+  padding-left: 0.1rem;
 }
 
 p:hover {
@@ -31,13 +32,23 @@ p:hover {
   color: #5cb85c;
 }
 
-@media (max-width: 800px) {
+/* @media (max-width: 800px) {
+  p {
+    font-size: 14px;
+  }
+} */
+@media (max-width: 599px) {
+  p {
+    font-size: 11px;
+  }
+}
+@media only screen and (min-width: 600px) {
   p {
     font-size: 14px;
   }
 }
-@media (max-width: 400px) {
+@media only screen and (min-width: 990px) {
   p {
-    font-size: 11px;
+    font-size: 18px;
   }
 }
